<resources>
    <string name="app_name">BioCom</string>
    <string name="ndefRead_empty_record">No text record detected</string>
    <string name="ndef_operations">NDEF Operations</string>
    <string name="drawer_toggle_open">Drawer Open</string>
    <string name="drawer_toggle_close">Drawer Close</string>
    <string name="nfc_device_manager">NDEF Payload Manager</string>
    <string name="scan_text_encrypted">Scan an NFC tag containing an encrypted NDEF record</string>
    <string name="cryptographic_operations">Cryptographic Operations</string>
    <string name="decrypt_ndef_text">Decrypt PGP NDEF Text</string>
    <string name="write_ndef_text_records">Write NDEF Records</string>
    <string name="type_ndef_string_payload_here">Enter text here</string>
    <string name="scan_text_writable">Scan a writeable NFC tag</string>
    <string name="scan_text_write_warning">WARNING: This will erase the tag\'s existing records</string>
    <string name="nfc_tag_operations">NFC Tag Operations</string>
    <string name="erase_tag_contents">Erase Tag Contents</string>
    <string name="payload_size">"Payload Size: "</string>
    <string name="bytes">" Bytes"</string>
    <string name="application_logo">Application Icon</string>
    <string name="get_tag_info">Tag Info</string>
    <string name="scan_nfc">Scan an NFC Tag</string>
    <string name="uid">UID:</string>
    <string name="ic_manufacturer">IC Manufacturer:</string>
    <string name="is_writeable">Is Writeable:</string>
    <string name="can_be_read_only">Can be made Read-Only:</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="uri">URI:</string>
    <string name="enter_uri_address">Enter URI Address</string>
    <string name="preview_image">Preview image</string>
    <string name="read_image">Read in image</string>
    <string name="select_a_jpeg_image">Select a JPEG Image</string>
    <string name="jpeg_compression_level">JPEG Compression Level</string>
    <string name="percentage">%</string>
    <string name="scan_nfc_device_to_read_payload">Scan NFC device to read payload</string>
    <string name="animation_image">animation image</string>
    <string name="encrypt_ndef_text">Encrypt PGP NDEF Text</string>
    <string name="plain_text">Plain Text</string>
    <string name="jpeg">JPEG</string>
    <string name="uri_text">URI</string>
    <string name="edit_markdown_text_here">Enter Markdown text here</string>
    <string name="markdown">Markdown</string>
    <string name="markdown_bold_button">Markdown bold button</string>
    <string name="markdown_italicize_button">Markdown italicize button</string>
    <string name="markdown_code_button">Markdown code button</string>
    <string name="markdown_link_button">Markdown link button</string>
    <string name="markdown_strikethrough_button">Markdown strikethrough button</string>
    <string name="markdown_bulleted_list_button">Markdown bulleted list button</string>
    <string name="markdown_quote_button">Markdown quote button</string>
    <string name="button_for_previewing_markdown_text">Button for previewing markdown text</string>
    <string name="hide_preview_button">Hide preview button</string>
    <string name="memory_capacity">NDEF Capacity:</string>
    <string name="get_version">get_version:</string>
    <string name="unknown_tag_type">Unknown Tag Type</string>
    <string name="thematic_break_button">Thematic break button</string>
</resources>
