<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:title="@string/ndef_operations">
            <menu>
                <group
                    android:checkableBehavior="none">
                    <item
                        android:id="@+id/nav_ndef_read"
                        android:title="@string/read_ndef_records"/>
                    <item
                        android:id="@+id/nav_ndef_write"
                        android:title="@string/write_ndef_text_records"/>
                </group>
            </menu>
        </item>
        <item
            android:title="@string/cryptographic_operations">
            <menu>
                <group
                    android:checkableBehavior="none">
                    <item
                        android:id="@+id/nav_ndef_decrypt"
                        android:title="@string/decrypt_tag_contents"/>
                </group>
            </menu>
        </item>
        <item
            android:title="@string/nfc_tag_operations">
            <menu>
                <group
                    android:checkableBehavior="none">
                    <item
                        android:id="@+id/nav_erase_tag"
                        android:title="@string/erase_tag_contents"/>
                </group>
            </menu>
        </item>
    </group>
</menu>