<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.EditText">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_edit_markdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_edit_markdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/ibmplexmono_text"
                android:hint="@string/edit_markdown_text_here"
                android:inputType="textMultiLine|textPersonName"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/white_rounded_background"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_preview_markdown">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:dividerPadding="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_markdown_bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/markdown_bold_button"
                android:scaleType="center"
                android:src="@drawable/ic_bold" />

            <ImageButton
                android:id="@+id/button_markdown_italicize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/markdown_italicize_button"
                android:src="@drawable/ic_italic" />

            <ImageButton
                android:id="@+id/button_markdown_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/markdown_code_button"
                android:src="@drawable/ic_code" />

            <ImageButton
                android:id="@+id/button_markdown_link"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/markdown_link_button"
                android:src="@drawable/ic_link" />

            <ImageButton
                android:id="@+id/button_markdown_strikethrough"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/markdown_strikethrough_button"
                android:src="@drawable/ic_strikethrough" />

            <ImageButton
                android:id="@+id/button_markdown_bullet_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/markdown_bulleted_list_button"
                android:src="@drawable/ic_bullet_list" />

            <ImageButton
                android:id="@+id/button_markdown_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/markdown_quote_button"
                android:src="@drawable/ic_quote" />
        </LinearLayout>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/button_preview_markdown"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/white_rounded_background"
        android:contentDescription="@string/button_for_previewing_markdown_text"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
